# Video-to-ASCII

./: .gitignore  CMakeLists.txt  README.md  Structs.h  cmdutils.cpp  cmdutils.hpp  colorUtil.cpp  colorUtil.hpp  main.cpp
src/: main.cpp  structs.h
src/modules/audiorw/: audiorw.h  read.cpp  write.cpp
src/utility/: cmd.cpp  cmd.h  colors.cpp  colors.h  youtube.cpp  youtube.h
